Api & Repository refactored + Controller & Services completed
