# rtcms4j-notify-api/src/main/resources/static/openapi/notify-api.yaml
@@ -12,6 +12,47 @@ paths:
   ############################
   # Managing configurations: #
   ############################
+  /namespace/{nid}/application/{aid}/sse-stream:
+    get:
+      tags:
+        - Notify
+      summary: SSE notifications endpoint
+      operationId: subscribeOnNotificationSse
+      parameters:
+        - name: nid
+          description: Namespace id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+        - name: aid
+          description: Application id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: Successfully connected to event stream
+          content:
+            text/event-stream:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/NotificationEventDto"
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/Forbidden'
+        '405':
+          $ref: '#/components/responses/MethodNotAllowed'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
+
   /namespace/{nid}/application/{aid}/feedback:
     get:
       tags:
@@ -182,54 +223,6 @@ paths:
         '500':
           $ref: '#/components/responses/InternalServerError'
 
-  /namespace/{nid}/application/{aid}/configuration/{cid}/sse-stream:
-    get:
-      tags:
-        - Notify
-      summary: SSE notifications endpoint
-      operationId: subscribeOnConfigurationSse
-      parameters:
-        - name: nid
-          description: Namespace id
-          in: path
-          required: true
-          schema:
-            type: integer
-            format: int64
-        - name: aid
-          description: Application id
-          in: path
-          required: true
-          schema:
-            type: integer
-            format: int64
-        - name: cid
-          description: Configuration id
-          in: path
-          required: true
-          schema:
-            type: integer
-            format: int64
-      responses:
-        '200':
-          description: Successfully connected to event stream
-          content:
-            text/event-stream:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/NotificationEventDto"
-        '400':
-          $ref: '#/components/responses/BadRequest'
-        '401':
-          $ref: '#/components/responses/Unauthorized'
-        '403':
-          $ref: '#/components/responses/Forbidden'
-        '405':
-          $ref: '#/components/responses/MethodNotAllowed'
-        '500':
-          $ref: '#/components/responses/InternalServerError'
-
 components:
   securitySchemes:
     bearerAuth:
@@ -317,11 +310,11 @@ components:
       type: object
       required:
         - clientName
-        - isPasswordRotated
+        - isSecretRotated
       properties:
         clientName:
           type: string
-        isPasswordRotated:
+        isSecretRotated:
           type: boolean
 
     ApplicationFeedbackResponseDto:
@@ -330,21 +323,23 @@ components:
         - content
       properties:
         content:
-          $ref: '#/components/schemas/ApplicationFeedbackDto'
+          type: array
+          items:
+            $ref: '#/components/schemas/ApplicationFeedbackDto'
 
     ApplicationFeedbackDto:
       type: object
       required:
         - datedAt
         - clientName
-        - isPasswordRotated
+        - isSecretRotated
       properties:
         datedAt:
           type: string
           format: datetime
         clientName:
           type: string
-        isPasswordRotated:
+        isSecretRotated:
           type: boolean
 
     ConfigurationFeedbackRequestDto:
@@ -364,7 +359,9 @@ components:
         - content
       properties:
         content:
-          $ref: '#/components/schemas/ConfigurationFeedbackDto'
+          type: array
+          items:
+            $ref: '#/components/schemas/ConfigurationFeedbackDto'
 
     ConfigurationFeedbackDto:
       type: object
